@@ -1,5 +1,12 @@
 2008-01-12  Sven Herzberg  <herzi@gnome-de.org>
 
+	Prepare the game window for the maemo port.
+
+	* src/ui/ui-main.c: modify the code to work for GNOME and for Maemo
+	without changing the glade file
+
+2008-01-12  Sven Herzberg  <herzi@gnome-de.org>
+
 	Add the right dependencies for the Maemo port. Based on the Maemo port
 	of Monkey-Bubble which was created by Jouni Roivas.
 
